[package]
name = "gametime"
version = "0.3.0"
edition = "2021"
authors = ["Zakarum <zakarumych@ya.ru>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/gametime"
homepage = "https://github.com/zakarumych/gametime"
repository = "https://github.com/zakarumych/gametime"
readme = "README.md"
description = "Time handling library for games"

[features]
std = []
global_reference = ["std"]
default = ["std"]

[dependencies]
serde = { version = "1.0", optional = true }
